--- a/TalentShow/app/src/main/res/drawable/bottom_nav_bar_back.xml
+++ b/TalentShow/app/src/main/res/drawable/bottom_nav_bar_back.xml
@@ -5,7 +5,6 @@
     android:viewportHeight="83">
   <path
       android:pathData="M0,83H375V0H0V83Z"
-      android:fillColor="#F8F8F8"
-      android:fillAlpha="0.92"
+      android:fillColor="#262626"
       android:fillType="evenOdd"/>
 </vector>
