--- a/TalentShow/app/src/main/res/layout/fragment_casting.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_casting.xml
@@ -4,54 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E5E5E5"
+    android:background="@color/darkBackground"
     android:id="@+id/activity_casting_layout"
     tools:context="com.avatar.ava.presentation.main.fragments.casting.CastingFragment">
 
-
-    <TextView
-        android:id="@+id/activity_casting_head"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="96dp"
-
-        android:layout_marginBottom="688dp"
-        android:gravity="top"
-        android:lineSpacingExtra="0sp"
-        android:text="@string/activity_casting_head"
-        android:textAppearance="@style/activity_casting_heading"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:layout_width="28dp"
-        android:layout_height="28dp"
-
-        android:layout_marginTop="96dp"
-        android:layout_marginEnd="17dp"
-        android:layout_marginBottom="688dp"
-        android:src="@drawable/blue_circle"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
-    <ImageView
-        android:layout_width="18dp"
-        android:layout_height="18dp"
-
-        android:layout_marginTop="96dp"
-        android:layout_marginEnd="22dp"
-        android:layout_marginBottom="688dp"
-        android:src="@drawable/white_cross"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-
-        app:layout_constraintTop_toTopOf="parent" />
 
 
     <androidx.cardview.widget.CardView
@@ -59,7 +15,7 @@
         android:layout_width="0dp"
         android:layout_height="398dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="226dp"
+        android:layout_marginTop="17dp"
         android:layout_marginEnd="17dp"
         android:layout_marginBottom="188dp"
         app:cardCornerRadius="20dp"
@@ -154,22 +110,6 @@
         android:elevation="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
-
-    <ImageButton
-        android:layout_width="110dp"
-        android:layout_height="50dp"
-        android:id="@+id/activity_casting_btn_comment"
-        android:background="@drawable/casting_activity_btn_comment"
-        android:layout_marginTop="599dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginEnd="46dp"
-        android:layout_marginBottom="163dp"
-        android:elevation="10dp"
-        app:layout_constraintStart_toEndOf="@+id/activity_casting_btn_x"
-        app:layout_constraintEnd_toStartOf="@+id/activity_casting_btn_like"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         />
