--- a/TalentShow/app/src/main/res/layout/fragment_load_file.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_load_file.xml
@@ -6,18 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ProgressBar
-        android:id="@+id/fragment_file_load_progressbar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="invisible"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/fragment_video_load_back"
+        android:id="@+id/main_frame_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="9dp"
@@ -61,7 +51,7 @@
         android:text="@string/load_new_video"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_video_load_back"/>
+        app:layout_constraintTop_toBottomOf="@id/main_frame_back"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/fragment_video_load_rectangle"
