--- a/TalentShow/app/src/main/res/values/colors.xml
+++ b/TalentShow/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="darkBackground">#141516</color>
     <color name="whiteText">#FFFFFF</color>
     <color name="whiteEditableText">#F1F1F1</color>
+    <color name="regGrayColor">#D2D2D2</color>
     <color name="hint_text_color">#A1A1A1</color>
     <color name="blueTextColor">#007AFF</color>
     <color name="whiteBackground">#FFFFFF</color>
@@ -17,6 +18,7 @@
     <color name="medium_gray_text">#C4CACC</color>
     <color name="greyText">#ABABAB</color>
     <color name="hintTextColor">#000000</color>
+    <color name="none_color">#00000000</color>
 
 
 </resources>
