--- a/TalentShow/app/src/main/res/layout/activity_main_frame.xml
+++ b/TalentShow/app/src/main/res/layout/activity_main_frame.xml
@@ -21,6 +21,7 @@
             android:id="@+id/main_frame_back"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:visibility="invisible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent">
@@ -57,13 +58,13 @@
             android:textColor="@color/whiteText"
             android:textSize="17sp"
             android:gravity="center"
-            app:layout_constraintStart_toEndOf="@id/main_frame_back"
-            app:layout_constraintEnd_toStartOf="@id/main_frame_text2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/main_frame_text2"
+            android:id="@+id/main_frame_save"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textSize="17sp"
@@ -72,9 +73,33 @@
             android:text="@string/save"
             android:layout_marginEnd="17dp"
             android:gravity="end"
+            android:visibility="invisible"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
+
+        <View
+            android:id="@+id/main_frame_menu_points"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:background="@drawable/three_points"
+            android:layout_marginEnd="16dp"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <View
+            android:id="@+id/main_frame_add"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:padding="30dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/white_cross"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
