--- a/TalentShow/app/src/main/res/layout/star_rating_recycler_item_star.xml
+++ b/TalentShow/app/src/main/res/layout/star_rating_recycler_item_star.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -7,45 +7,83 @@
     android:layout_height="wrap_content"
     android:background="@color/darkBackground">
 
-    <TextView
-        android:id="@+id/star_rating_recycler_item_number"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:textColor="@color/greyText"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:hint="@string/number_hint"
-        android:textColorHint="@color/grayText"
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="518dp"
+        app:cardCornerRadius="20dp"
+        app:cardBackgroundColor="@color/blackText"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent">
 
-    <ImageView
-        android:id="@+id/star_rating_recycler_item_avatar"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="17dp"
-        tools:src="@tools:sample/avatars"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/star_rating_recycler_item_number"/>
+        <VideoView
+            android:id="@+id/rating_item_video"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="0dp"
+            android:clickable="false" />
 
-    <TextView
-        android:id="@+id/star_rating_recycler_item_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="13dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
-        android:textColor="@color/grayText"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        android:hint="@string/name_hint"
-        android:textColorHint="@color/grayText"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/star_rating_recycler_item_avatar"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <ImageView
+            android:id="@+id/rating_item_ava"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="400dp"
+            android:layout_marginEnd="293dp"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:src="@drawable/casting_activity_ava"
+
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+
+        <TextView
+            android:id="@+id/rating_item_pos"
+            android:layout_width="wrap_content"
+            android:layout_height="28dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="57dp"
+            android:gravity="center_vertical"
+            android:lineSpacingExtra="1sp"
+            android:text="1 место"
+            android:textColor="@color/whiteText"
+
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+
+
+        <TextView
+            android:id="@+id/rating_item_name"
+            android:layout_width="wrap_content"
+            android:layout_height="28dp"
+            android:layout_marginStart="66dp"
+            android:layout_marginTop="400dp"
+            android:layout_marginEnd="57dp"
+            android:gravity="center_vertical"
+            android:lineSpacingExtra="1sp"
+            android:text="@string/activity_casting_name"
+            android:textColor="@color/whiteText"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+
+        <TextView
+            android:id="@+id/rating_item_description"
+            android:layout_width="291dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="430dp"
+            android:layout_marginEnd="20dp"
+
+            android:gravity="top"
+            android:lineSpacingExtra="2sp"
+            android:text="Это описание к видео, которое написал автор, чтобы было понятно, что он хочет сказать своим творчеством. Наверное, тут очень ограничен обхем текста."
+            android:textColor="@color/whiteText"
+            android:translationY="-1.05sp" />
+
+    </androidx.cardview.widget.CardView>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        />
+
+</LinearLayout>
