--- a/TalentShow/app/src/main/res/layout/activity_main_frame.xml
+++ b/TalentShow/app/src/main/res/layout/activity_main_frame.xml
@@ -106,7 +106,7 @@
     <FrameLayout
         android:id="@+id/activity_main_frame_container"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/bottom_nav_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
