--- a/TalentShow/app/src/main/res/layout/activity_main_frame.xml
+++ b/TalentShow/app/src/main/res/layout/activity_main_frame.xml
@@ -115,13 +115,12 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav_bar"
         android:layout_width="match_parent"
-
-        android:layout_height="60dp"
-        android:background="@drawable/tmp_back"
-        app:itemIconTint="@color/grayText"
-        app:itemTextColor="@color/grayText"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bottom_nav_bar_back"
         app:menu="@menu/menu_bottom_nav_bar"
-
+        app:labelVisibilityMode="labeled"
+        app:itemIconTint="@color/bottom_nav_bar_color"
+        app:itemTextColor="@color/bottom_nav_bar_color"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 
