--- a/TalentShow/app/src/main/res/layout/fragment_profile.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile.xml
@@ -7,7 +7,144 @@
     android:background="@color/darkBackground"
     tools:context=".presentation.main.fragments.profile.ProfileFragment">
 
-    
+    <ImageView
+        android:id="@+id/fragment_profile_image"
+        android:contentDescription="Add"
+        android:layout_width="73dp"
+        android:layout_height="73dp"
+        android:layout_marginTop="145dp"
+        android:layout_marginBottom="585dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="286dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <TextView
+        android:text="Имя Фамилия"
+        android:id="@+id/fragment_profile_name"
+        android:layout_width="252dp"
+        android:layout_height="wrap_content"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        android:textColor="@color/whiteText"
+        android:layout_marginTop="113dp"
+        android:layout_marginBottom="574dp"
+        android:layout_marginStart="109dp"
+        android:layout_marginEnd="14dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/fragment_profile_likes"
+        android:text="0 Лайков"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/whiteText"
+        android:textSize="20sp"
+        android:layout_marginTop="193dp"
+        android:layout_marginBottom="520dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+    <TextView
+        android:text="Это количество лайков, которые ты получил за все свои видео"
+        android:layout_width="344dp"
+        android:layout_height="wrap_content"
+        android:textColor="#A2A2A2"
+        android:textSize="11sp"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toTopOf="@id/fragment_profile_likes"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Описание"
+        android:textColor="@color/whiteText"
+        android:textSize="20sp"
+        android:layout_marginTop="46dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toTopOf="@id/fragment_profile_likes"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+    <EditText
+        android:id="@+id/fragment_profile_description"
+        android:layout_width="343dp"
+        android:layout_height="wrap_content"
+        android:text="Описание"
+        android:textSize="15sp"
+        android:textColor="@color/whiteText"
+        android:layout_marginTop="85dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toTopOf="@id/fragment_profile_likes"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ссылка на соцсеть"
+        android:textColor="@color/whiteText"
+        android:textSize="20sp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toBottomOf="@id/fragment_profile_description"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+
+    <EditText
+        android:id="@+id/fragment_profile_link"
+        android:layout_width="343dp"
+        android:layout_height="wrap_content"
+        android:text="ссылка"
+        android:textSize="15sp"
+        android:textColor="@color/whiteText"
+        android:layout_marginTop="88dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toTopOf="@id/fragment_profile_description"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Загруженные видео"
+        android:textColor="@color/whiteText"
+        android:textSize="20sp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toBottomOf="@id/fragment_profile_link"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+    <Button
+        android:id="@+id/fragment_profile_btn"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toBottomOf="@id/fragment_profile_link"
+        app:layout_constraintStart_toStartOf="parent"
+
+        />
+
+
+
+
+
+
 
 
 
