--- a/TalentShow/app/src/main/res/layout/fragment_profile.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile.xml
@@ -7,19 +7,55 @@
     android:background="@color/darkBackground"
     tools:context=".presentation.main.fragments.profile.ProfileFragment">
 
+    <TextView
+        android:id="@+id/fragment_profile_btn_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="600dp"
+        android:text="Редактировать"
+        android:textColor="@color/whiteText"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
     <ImageView
         android:id="@+id/fragment_profile_image"
-        android:contentDescription="Add"
         android:layout_width="73dp"
         android:layout_height="73dp"
-        android:layout_marginTop="145dp"
-        android:layout_marginBottom="585dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="145dp"
         android:layout_marginEnd="286dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="585dp"
+        android:contentDescription="Add"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.555"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/fragment_profile_edit_photo"
+        android:layout_width="30dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="136dp"
+        android:layout_marginEnd="300dp"
+        android:layout_marginBottom="595dp"
+        android:text="Ред."
+        android:textColor="@color/whiteText"
+        android:textSize="15sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
         android:text="Имя Фамилия"
@@ -129,16 +165,7 @@
         app:layout_constraintStart_toStartOf="parent"
         />
 
-    <Button
-        android:id="@+id/fragment_profile_btn"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintTop_toBottomOf="@id/fragment_profile_link"
-        app:layout_constraintStart_toStartOf="parent"
 
-        />
 
 
 
