--- a/TalentShow/app/src/main/res/layout/activity_star_video_best.xml
+++ b/TalentShow/app/src/main/res/layout/activity_star_video_best.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.avatar.ava.presentation.main.FragmentChooseVideoBest">
+    tools:context="com.avatar.ava.presentation.signing.fragments.FragmentChooseVideoBest">
 
 
     <com.deep.videotrimmer.DeepVideoTrimmer
