--- a/TalentShow/app/src/main/res/layout/notification_item.xml
+++ b/TalentShow/app/src/main/res/layout/notification_item.xml
@@ -22,9 +22,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="11dp"
+        android:layout_marginEnd="10dp"
+        android:textColor="@color/whiteText"
         app:layout_constraintStart_toEndOf="@id/notifications_item_avatar"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 
 
