--- a/TalentShow/app/src/main/res/layout/fragment_profile.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile.xml
@@ -127,52 +127,192 @@
         app:layout_constraintStart_toStartOf="parent"
         />
 
+
     <TextView
+        android:id="@+id/fragment_profile_video_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ссылка на соцсеть"
-        android:textColor="@color/whiteText"
-        android:textSize="20sp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintTop_toBottomOf="@id/fragment_profile_description"
-        app:layout_constraintStart_toStartOf="parent"
-        />
-
-
-    <EditText
-        android:id="@+id/fragment_profile_link"
-        android:layout_width="343dp"
-        android:layout_height="wrap_content"
-        android:text="ссылка"
-        android:textSize="15sp"
-        android:textColor="@color/whiteText"
-        android:layout_marginTop="88dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintTop_toTopOf="@id/fragment_profile_description"
-        app:layout_constraintStart_toStartOf="parent"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="Загруженные видео"
         android:textColor="@color/whiteText"
         android:textSize="20sp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintTop_toBottomOf="@id/fragment_profile_link"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fragment_profile_description" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="160dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="20dp"
+        android:id="@+id/fragment_profile_container"
+        app:layout_constraintTop_toBottomOf="@id/fragment_profile_video_tv"
+        app:layout_constraintStart_toStartOf="parent"
+        >
+
+        <VideoView
+            android:id="@+id/fragment_profile_video_1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+
         />
 
+        <ImageButton
+            android:id="@+id/fragment_profile_add_video_btn_1"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:background="@drawable/fragment_profile_add_video_img"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/fragment_profile_in_casting_1"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:text="В кастинге"
+            android:gravity="center"
+            android:textSize="11sp"
+            android:textColor="@color/whiteText"
+            android:background="#262626"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
 
 
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="160dp"
+        android:layout_height="100dp"
+        android:layout_marginEnd="26dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/fragment_profile_video_tv"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
+
+        <VideoView
+            android:id="@+id/fragment_profile_video_2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            />
+
+        <ImageButton
+            android:id="@+id/fragment_profile_add_video_btn_2"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:background="@drawable/fragment_profile_add_video_img"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/fragment_profile_in_casting_2"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:text="В кастинге"
+            android:gravity="center"
+            android:textSize="11sp"
+            android:textColor="@color/whiteText"
+            android:background="#262626"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+
+        android:layout_width="160dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/fragment_profile_container"
+        app:layout_constraintStart_toStartOf="parent"
+        >
+
+        <VideoView
+            android:id="@+id/fragment_profile_video_3"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            />
+
+        <ImageButton
+            android:id="@+id/fragment_profile_add_video_btn_3"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:background="@drawable/fragment_profile_add_video_img"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/fragment_profile_in_casting_3"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:text="В кастинге"
+            android:gravity="center"
+            android:textSize="11sp"
+            android:textColor="@color/whiteText"
+            android:background="#262626"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="160dp"
+        android:layout_height="100dp"
+        android:layout_marginEnd="26dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/fragment_profile_container"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
+
+        <VideoView
+            android:id="@+id/fragment_profile_video_4"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            />
+
+        <ImageButton
+            android:id="@+id/fragment_profile_add_video_btn_4"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:background="@drawable/fragment_profile_add_video_img"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/fragment_profile_in_casting_4"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:text="В кастинге"
+            android:gravity="center"
+            android:textSize="11sp"
+            android:textColor="@color/whiteText"
+            android:background="#262626"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
