--- a/TalentShow/app/src/main/res/layout/star_rating_recycler_item_star.xml
+++ b/TalentShow/app/src/main/res/layout/star_rating_recycler_item_star.xml
@@ -20,12 +20,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <VideoView
-            android:id="@+id/rating_item_video"
-            android:layout_gravity="center_horizontal"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            />
+            android:layout_weight="3"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
+            android:scaleType="fitXY">
+            <VideoView
+                android:id="@+id/rating_item_video"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentStart="true"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                />
+        </RelativeLayout>
+
+
 
 
         <ImageView
