--- a/TalentShow/app/src/main/res/layout/fragment_profile.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/darkBackground"
-    tools:context=".presentation.main.fragments.profile.ProfileFragment">
+    tools:context=".presentation.main.fragments.profile.ProfileFragment"
+    android:id="@+id/fragment_profile">
 
     <TextView
         android:id="@+id/fragment_profile_btn_edit"
@@ -18,6 +20,7 @@
         android:text="Редактировать"
         android:textColor="@color/whiteText"
         android:textSize="12sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,8 +60,10 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
-    <TextView
+    <EditText
         android:text="Имя Фамилия"
+        android:background="#00000000"
+        android:enabled="false"
         android:id="@+id/fragment_profile_name"
         android:layout_width="252dp"
         android:layout_height="wrap_content"
