Screen with choosing 30 seconds reworked, uploading to server reworked

--- a/TalentShow/app/src/main/res/layout/fragment_rating.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_rating.xml
@@ -7,7 +7,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Топ-20"
+        android:text="@string/top_20"
         android:textSize="20sp"
         android:textColor="@color/whiteText"
         android:layout_marginStart="16dp"
