--- a/TalentShow/app/src/main/res/layout/fragment_file_load_main.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_file_load_main.xml
@@ -6,6 +6,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ProgressBar
+        android:id="@+id/file_load_main_progressbar"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:visibility="invisible"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <TextView
         android:id="@+id/fragment_load_file_main_text1"
         android:layout_width="0dp"
