--- a/TalentShow/app/src/main/res/layout/fragment_profile_bottom_sheet.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile_bottom_sheet.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="220dp"
 
     tools:context=".presentation.main.BottomSheetFragments.ProfileBottomSheet">
 
@@ -59,6 +59,7 @@
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="Отмена"
+        android:textStyle="bold"
         android:textColor="@color/whiteText"
         android:textSize="20sp"
         android:background="@drawable/bottom_sheet_profile_item_bg"
