--- a/TalentShow/app/src/main/res/layout/fragment_change_password.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_change_password.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/darkBackground"
-    tools:context=".presentation.main.fragments.profile.profileSettings.ChangePassword.ChangePasswordFragment">
+    tools:context=".presentation.main.fragments.profile.profileSettings.changePassword.ChangePasswordFragment">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
